--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Hello, World</h1>
     <!-- Font awesome icon -->
     <!-- <i class="fa-solid fa-house"></i> -->
     <!-- Script -->
